# one-does-not-simply-sign

./: .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  Cargo.toml  README.md  codecov.yml
.github/workflows/: test.yml
old_src/: factor_results_building_coordinator.rs
old_src/drivers/: is_use_factor_source_drivers_context.rs  use_factor_source_driver.rs
old_src/owned_types/: owned_factor_instance.rs
old_src/petition_types/: builder_entity.rs  factor_list_kind.rs  mod.rs
old_src/types/: hd_signature_input.rs  invalid_transaction_if_skipped.rs  sign_with_factor_source_or_sources_outcome.rs
old_tests/: main.rs
src/: existing_types_in_sargon.rs  factor_results_building_coordinator.rs  fia.rs  lib.rs  sargon_types.rs  signatures_building_coordinator.rs  signatures_collecting_coordinator.rs  signatures_collector.rs  support.rs
src/collector/: factor_sources_of_kind.rs  mod.rs  signatures_collector.rs  signatures_collector_dependencies.rs  signatures_collector_preprocessor.rs  signatures_collector_state.rs
src/derivation/: mod.rs
src/drivers/: batch_signing_response.rs  is_use_factor_source_drivers_context.rs  mod.rs  parallel_batch_signing_driver.rs  parallel_batch_use_factor_sources_driver.rs  serial_batch_signing_driver.rs  serial_batch_use_factor_source_driver.rs  serial_single_signing_driver.rs  serial_single_use_factor_source_driver.rs  signing_driver.rs  signing_drivers_context.rs  use_factor_source_client.rs  use_factor_source_driver.rs
src/fia/: factor_instance_accumulator.rs  fia_key_derivation.rs  fia_transaction_signing.rs  (+1 more)
tests/: main.rs
(+149 files in other folders)
