[package]
name = "use_factors"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
async-trait = "0.1.80"
derive-getters = "0.4.0"

# 1.0.0
derive_more = { git = "https://github.com/JelteF/derive_more", rev = "d7f5b9e94d024790682f6fc4dcca13941cce64c8", features = [
    "debug",
    "display",
    "from_str",
] }

indexmap = "2.2.6"
indexset = "0.4.0"
itertools = "0.13.0"
once_cell = "1.19.0"
rand = "0.8.5"
sha256 = "1.5.0"
# strum = "0.26.1"
strum = { git = "https://github.com/Peternator7/strum/", rev = "f746c3699acf150112e26c00e6c8ca666d8d068d", features = [
    "derive",
] }
thiserror = "1.0.61"
uuid = { version = "1.9.0", features = ["v4"] }
pretty_assertions = "1.4.0"
